documents and website updated

--- a/index.html
+++ b/index.html
@@ -1,36 +1,79 @@
-  <!DOCTYPE HTML>
-<HTML>
-	<head>
-		<title>GW CS Senior Design YOUR NAME</title>
-		<link rel="stylesheet" type="text/css" href="style_students.css">
-	</head>
-	<body>
-		<div id="header_div">
-			<p>
-			<a href="https://capstone.cs.gwu.edu/2016">GW CS Senior Design</a> 2016
-			</p>
-		</div>
-		<div id="outer_div">
-			<div id="middle_div">
-				<div class="subheader_div">
-					<h2>YOUR NAME: PROJECT TITLE here</h2>
-					<img src="profile_pic.jpg" width="150">
-				</div>
-				<div id="inside_div"> 
-					<p>
-						Project description goes here.
-					</p>
-					<p>
-						<strong>Bio:</strong>
-						Enter Bio Text Here
-					</p>
-					<p>
-						<strong>Documentation:</strong> 							
-						<ul>
-						</ul>
-					</p>
-				</div>
+<!DOCTYPE HTML>
+<html>
+<head>
+<title>GW CS Senior Design YOUR NAME</title>
+<link rel="stylesheet" type="text/css" href="style_students.css">
+</head>
+<body>
+	<div id="header_div">
+		<p>
+			<a href="https://capstone.cs.gwu.edu/2016">GW CS Senior Design</a>
+			2016
+		</p>
+	</div>
+	<div id="outer_div">
+		<div id="middle_div">
+			<div class="subheader_div">
+				<h2>Ian Davila: Search and Rescue Assistant</h2>
+				<img src="profile_pic.jpg" width="150">
+			</div>
+			<div id="inside_div">
+				<p>Search and rescue volunteers face a shortcoming in technology
+					that is available for their needs. Increasing the number of systems
+					designed for search and rescue helps to improve the capabilities of
+					volunteers and helps more people to be found alive and well. It is
+					easy to use allowing anyone to use the syste. The core of this
+					project was creating a field transmitter prototype, and programming
+					it to adapt to how it is being used in order to save as much energy
+					as possible and eliminate the need for volunteers pause the search
+					and recharge the device. Search and rescue assistant is a system
+					comprising of 3 parts, a mapping program, a home base receiver, and
+					a field transmitter. A typical search and rescuer operation
+					consists of 3-5 man teams that report to a commander who
+					coordinates efforts. For this system, every team would be given a
+					field transmitter and would perform a &ldquo;check-in&rdquo; where
+					the device gets the teams GPS position. That information would be
+					sent to the receiver which translates the information for the
+					computer program. The program automatically updates the commanders
+					topographic map with where teams are and displays areas that have
+					been searched.</p>
+				<p>
+					<strong>Bio:</strong> Enter Bio Text Here
+				</p>
+				<p style="text-decoration: underline;">
+					<strong>Documentation</strong>
+				</p>
+				<p>
+					<a href="documents/Writing_1-NFS_proposal.pdf"><strong>Writing
+							1: NFS proposal</strong></a>
+				</p>
+				<p>
+					<a href="documents/Writing_1-NFS_proposal_revised.pdf"><strong>Writing
+							1: NFS proposal revised</strong></a>
+				</p>
+				<p>
+					<a href="documents/Writing_2-Technical_document.pdf"><strong>Writing
+							2: Functional Spec</strong></a>
+				</p>
+				<p>
+					<a href="documents/Design_doc_1-users_and_use_cases.pdf"><strong>Design
+							doc 1: Business plan and social impact</strong></a>
+				</p>
+				<p>
+					<a href="documents/Desgin_doc_2-Components_and_interfaces.pdf"><strong>Design
+							doc 2: Components and interfaces&nbsp;</strong></a>
+				</p>
+				<p>
+					<a href="documents/Presentaion_8-1.pptx"><strong>Final
+							presentation slide</strong></a>
+				</p>
+				<p>
+					<strong>Screen cast</strong>
+				</p>
+				<ul>
+				</ul>
 			</div>
 		</div>
-	<body>
-</HTML>
+	</div>
+</body>
+</html>
