--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
 					topographic map with where teams are and displays areas that have
 					been searched.</p>
 				<p>
-					<strong>Bio:</strong> Enter Bio Text Here
+					<strong>Bio:</strong> I am a graduating senior from George
+					Washington university with bachelor of science in computer science.
+					I am interested in imbedded systems and software engineering. I
+					plan on working in the DC metropolitan area after graduation.
 				</p>
 				<p style="text-decoration: underline;">
 					<strong>Documentation</strong>
