--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div id="middle_div">
 			<div class="subheader_div">
 				<h2>Ian Davila: Search and Rescue Assistant</h2>
-				<img src="profile_pic.jpg" width="150">
+				<img src="profile_pic.JPG" width="150">
 			</div>
 			<div id="inside_div">
 				<p>Search and rescue volunteers face a shortcoming in technology
